--- a/overview/introduction-and-value/what-is-googletest.mdx
+++ b/overview/introduction-and-value/what-is-googletest.mdx
@@ -1,185 +1,200 @@
 ---
 title: "What is GoogleTest?"
-description: "Learn what GoogleTest is: a widely adopted C++ testing framework, now merging GoogleTest and GoogleMock into one modern library. Discover why organizations choose it for reliability, expressiveness, and ease of integration into developer workflows."
+description: "An accessible explanation of GoogleTest—including its merger with GoogleMock—detailing its evolution into a unified, industry-standard C++ testing framework. Learn how it enables automated, repeatable, and expressive testing for C++ applications of all sizes."
 ---
 
 # What is GoogleTest?
 
-## Introduction
+## Unlocking Reliable, Expressive C++ Testing
 
-GoogleTest is a widely adopted C++ testing framework developed and maintained by Google, designed to help developers write robust, reliable, and maintainable tests for their C++ codebases. It merges the capabilities of both GoogleTest (the testing framework) and GoogleMock (the mocking library) into a single, modern library, simplifying integration and improving expressiveness.
+GoogleTest is a premier C++ testing framework that unifies automated testing with rich expressiveness and reliability. Born from Google's own rigorous requirements, and now merged seamlessly with GoogleMock, GoogleTest empowers developers to write automated, repeatable tests that scale from small modules to large applications.
 
-Whether you are working on simple unit tests, complex integration tests, or need to mock dependencies for isolated testing, GoogleTest empowers you with a comprehensive, intuitive, and performant testing toolkit.
+### Why GoogleTest Matters to You
 
----
+- **Automated, Repeatable Testing**: Run thousands of tests quickly and consistently with simple macros, letting you catch regressions early.
+- **Expressive Assertions**: Verify complex conditions clearly with a variety of built-in assertion macros and custom matcher support.
+- **Robust Test Organization**: Group tests logically into suites and fixtures, reusing setup code and improving maintainability.
+- **Supports Parameterized and Typed Tests**: Run the same test logic across different inputs and data types without code duplication.
+- **Detailed Failure Reporting with Context**: Failures include rich information, file/line annotation, and stack traces, simplifying debugging.
+- **Cross-Platform Portability**: Runs reliably on Linux, Windows, and Mac, making your tests widely usable.
 
-## Why GoogleTest Matters
+### Who Uses GoogleTest?
 
-In modern software development, automated testing ensures code correctness, facilitates continuous integration, and accelerates debugging. GoogleTest stands out by delivering the following core benefits:
-
-- **Reliability through Isolation:** Each test runs independently, guaranteeing that test failures are attributable solely to the code under test, not side effects from other tests.
-- **Expressive and Rich Assertions:** GoogleTest offers a rich set of assertion macros to verify various conditions, providing clear diagnostics when problems arise.
-- **Seamless Mocking with GoogleMock:** Integrated mocking capabilities allow precise control over dependencies, enabling tests of complex behaviors without fragile or cumbersome setups.
-- **Ease of Integration:** Compatible with all major platforms and build systems, GoogleTest fits smoothly into existing developer workflows, supporting both novices and seasoned experts.
-- **Test Discovery and Execution Automation:** Tests are automatically registered and can be run collectively or selectively, facilitating rapid feedback.
-
-These benefits make GoogleTest a preferred choice for organizations aiming to improve software quality without sacrificing developer productivity.
+GoogleTest is trusted by Google itself, the Chromium project, LLVM compiler, Protocol Buffers, OpenCV, and numerous other high-profile projects. If you're writing C++ software and need reliable testing, GoogleTest is the industry-standard.
 
 ---
 
-## What is GoogleTest?
+## What Is GoogleTest?
 
-At its core, GoogleTest is a C++ framework that simplifies writing tests by providing a structured way to define and run tests and assertions. It embraces the popular xUnit architecture familiar to developers from other languages, ensuring a minimal learning curve.
+Simply put, GoogleTest is a C++ testing framework designed to help you write robust, maintainable test programs. It merges the formerly separate GoogleTest and GoogleMock projects to offer a comprehensive test-and-mock solution.
 
-The library supports a wide range of testing patterns, including:
+At its core, GoogleTest allows you to write tests using simple macros like `TEST()`, `TEST_F()`, and `TEST_P()` for parameterized tests. It manages test execution, reporting, and failure handling automatically.
 
-- **Simple Tests:** Writing straightforward test cases using the `TEST()` macro.
-- **Test Fixtures:** Sharing common setup and teardown logic across multiple tests via `TEST_F()`.
-- **Parameterized and Typed Tests:** Running tests multiple times with different inputs or types, increasing coverage with concise code.
-- **Death Tests:** Verifying behavior on program termination or crashes.
+### Core Purpose
 
-In addition to test definition, GoogleTest manages test lifecycle, reporting, and runtime flag parsing, ensuring that the testing process is automated and easy to control.
+GoogleTest solves the challenge of verifying your C++ code's correctness efficiently and reliably:
+
+- It enables **automated, repeatable tests** that isolate each test’s execution.
+- Provides expressive, clear **assertions** to specify expected behavior.
+- Facilitates **organization** via test suites and fixtures, helping you manage tests at scale.
+- Supports **parameterization** to reduce duplication and increase coverage.
+
+### How GoogleTest Works
+
+- You write individual tests as macros, grouping related tests into suites.
+- GoogleTest runs each test separately, reporting the outcome.
+- Failures include detailed messages, stack traces, and optional test traces.
+- Supports rich parameterization and type-driven test patterns.
+
+These capabilities combine to reduce bugs, improve confidence, and speed up development cycles.
 
 ---
 
-## Unique Advantages
+## Key Features of GoogleTest
 
-GoogleTest merges the capabilities of GoogleTest and GoogleMock, removing the need for separate libraries and enabling:
+### 1. Simple Test Definitions with `TEST` and `TEST_F`
+Write focused tests with `TEST(TestSuiteName, TestName)` or use `TEST_F` with fixtures for shared setup:
 
-- **Unified API:** A coherent interface to write both tests and mocks, reducing cognitive overhead.
-- **Automatic Mock Verifications:** GoogleMock checks expectations without requiring explicit recording steps.
-- **Broad Platform Support:** From desktop operating systems like Linux, Windows, and macOS to embedded platforms such as ESP32, GoogleTest adapts flexibly.
+```cpp
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
 
-This combination of features positions GoogleTest as a comprehensive solution for modern C++ testing needs.
+class QueueTest : public testing::Test {
+ protected:
+  void SetUp() override {
+    queue_.Enqueue(1);
+  }
+  Queue<int> queue_;
+};
+
+TEST_F(QueueTest, DequeueReturnsItem) {
+  int* item = queue_.Dequeue();
+  ASSERT_NE(item, nullptr);
+  EXPECT_EQ(*item, 1);
+  delete item;
+}
+```
+
+### 2. Value-Parameterized Tests (`TEST_P` and `INSTANTIATE_TEST_SUITE_P`)
+Run the same tests with different input parameters without duplicating code:
+
+```cpp
+class StringLengthTest : public testing::TestWithParam<std::string> {};
+
+TEST_P(StringLengthTest, HasExpectedLength) {
+  EXPECT_GT(GetParam().length(), 0);
+}
+
+INSTANTIATE_TEST_SUITE_P(NonEmptyStrings, StringLengthTest,
+                         testing::Values("hello", "world", "test"));
+```
+
+### 3. Typed Tests and Type-Parameterized Tests
+Run tests across multiple data types to verify template behaviors.
+
+```cpp
+template<typename T>
+class NumericTest : public testing::Test {
+  T value_ = T();
+};
+
+using NumericTypes = ::testing::Types<int, float, double>;
+TYPED_TEST_SUITE(NumericTest, NumericTypes);
+
+TYPED_TEST(NumericTest, IsDefaultConstructed) {
+  TypeParam n = this->value_;
+  EXPECT_EQ(n, TypeParam());
+}
+```
+
+### 4. Rich Assertions and Custom Matchers
+Leverage a broad set of assertions (`EXPECT_EQ`, `ASSERT_TRUE`, `EXPECT_THROW`, and more) and extend with custom matchers for clearer failure messages.
+
+### 5. Fine-Grained Test Control
+
+- Skip tests dynamically with `GTEST_SKIP()`.
+- Run subsets of tests using filters.
+- Disable tests temporarily using the `DISABLED_` prefix.
+- Generate XML/JSON reports for Continuous Integration systems.
+
+### 6. Extensive Event Listener API
+Customize test reporting by implementing event listeners to track test progress, results, and failures.
+
+### 7. Support for Death Tests
+Write tests that verify your code terminates as expected in critical failure scenarios.
 
 ---
 
-## How GoogleTest Works: A High-Level Overview
+## Why Should You Care About GoogleTest?
 
-GoogleTest operates by identifying test cases at runtime through macros like `TEST()` and `TEST_F()`, which register themselves automatically. When the test executable runs, it initializes the framework using `testing::InitGoogleTest()`, then calls `RUN_ALL_TESTS()`, which executes all registered tests in isolation.
+GoogleTest radically improves your development workflow by helping you catch bugs early, clearly identify what went wrong, and maintain confidence in changes.
 
-For mocking, GoogleMock enables creation of mock objects that stand in for real dependencies, with syntax for specifying expectations and behavior.
+### Practical Benefits
 
-Illustratively, here is a simple test example:
+- **Speed**: Automate thousands of tests and integrate with CI to catch errors fast.
+- **Maintainability**: Organize tests cleanly with suites and fixtures.
+- **Quality**: Express complex test conditions precisely, reducing false negatives and positives.
+- **Reusability**: Parameterize tests to avoid redundancy.
+- **Portability**: Write once, run anywhere supported.
+
+### Common Use Cases
+
+- Unit testing functions, classes, and interfaces.
+- Regression testing across versions.
+- Data-driven testing with multiple inputs.
+- Template and generic library testing for multiple data types.
+- Ensuring code correctly throws exceptions or aborts (death tests).
+
+### Before GoogleTest vs After GoogleTest
+
+| Without GoogleTest                               | With GoogleTest                              |
+|-------------------------------------------------|--------------------------------------------|
+| Manually write ad-hoc checks and print logs.    | Write clear assertions that automatically report pass/fail.   |
+| Tests tangled with complex setup code.           | Use fixtures to share setup across tests cleanly.             |
+| Difficult to run tests selectively.               | Easily run single tests or filtered groups.                   |
+| Hard to track test failures and debug quickly.   | See detailed failure messages and stack traces immediately.  |
+
+---
+
+## Getting Started Preview
+
+To get started with GoogleTest:
+
+1. Include `#include <gtest/gtest.h>` in your test files.
+2. Define tests using the `TEST()`, `TEST_F()`, or `TEST_P()` macros.
+3. Initialize the framework in your `main()` with `testing::InitGoogleTest()`.
+4. Run all tests using `RUN_ALL_TESTS()`, which returns `0` on success.
+
+For example:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// A simple test.
-TEST(MathTest, AdditionWorks) {
-  EXPECT_EQ(2 + 2, 4);
+TEST(SampleTest, SimpleCheck) {
+  EXPECT_EQ(1 + 1, 2);
 }
-```
-
-This test checks that addition behaves as expected. Such tests are automatically discovered and run without manual registration.
-
----
-
-## Core Features
-
-### 1. Automatic Test Registration and Discovery
-Tests are automatically registered via macros, eliminating manual bookkeeping and enabling quick iteration.
-
-### 2. Rich Assertion Library
-Includes macros for equality, inequality, string matching, exceptions, and user-defined assertions live.
-
-### 3. Test Fixtures
-Share setup and teardown code, fostering organized and maintainable tests.
-
-### 4. Parameterized and Typed Tests
-Run multiple variations of a test, enabling broad coverage with efficient code.
-
-### 5. Death Tests
-Test that your code terminates or fails as expected under certain conditions.
-
-### 6. Integration with Build Systems
-Supports easy integration, especially with CMake (see the [Quickstart: Building with CMake](docs/quickstart-cmake.md)) and Bazel.
-
-### 7. Flexible Test Execution Control
-Run all tests, specific tests, or apply filters via command-line flags.
-
-### 8. Detailed Reporting and Logging
-Get informative output about test failures, including file, line number, and excerpts.
-
----
-
-## Real-World Example: Simplifying Test Execution
-
-Imagine you have a set of functions in your codebase you want to verify continuously. Instead of writing manual test runners or scripts, GoogleTest lets you write tests like this:
-
-```cpp
-TEST(StringUtilTest, CompareCaseInsensitive) {
-  EXPECT_TRUE(StrCaseCompare("hello", "HeLLo"));
-}
-```
-
-After linking your tests with `gtest_main`, you simply build and run the test executable, and GoogleTest handles the rest. This immediate feedback loop helps catch regressions early and boost confidence.
-
----
-
-## Getting Started
-
-To use GoogleTest, typically you will:
-
-1. Add GoogleTest as a dependency in your build system, for example using CMake with `FetchContent` to automatically download and link it.
-2. Write test cases using the provided macros such as `TEST()`, `TEST_F()`, and `TEST_P()`.
-3. Build your test executable linked to GoogleTest's libraries.
-4. Run your test executable to see tests execute and verify correctness.
-
-For detailed instructions, see the [Quickstart: Building with CMake](docs/quickstart-cmake.md) and [GoogleTest Primer](docs/primer.md).
-
----
-
-## Common Pitfalls and Tips
-
-- Always ensure `testing::InitGoogleTest()` is called before `RUN_ALL_TESTS()` in `main()`. Alternatively, link with `gtest_main` to avoid writing your own `main()`.
-- Prefer `EXPECT_*` assertions over `ASSERT_*` when you wish to continue testing after failure.
-- Use test fixtures (`TEST_F`) for clean and maintainable tests when sharing setup.
-- Use parameterized tests to avoid duplicate code when testing the same logic across multiple inputs.
-- Monitor test runtime and failures to maintain fast and effective coverage.
-
----
-
-## Troubleshooting
-
-If you encounter issues:
-
-- Check your build configuration to ensure correct linking with GoogleTest binaries.
-- Use verbose logging and the `--gtest_list_tests` flag to confirm test discovery.
-- Verify that your tests are not being filtered out by command-line arguments or environment variables.
-- Review the [Troubleshooting Common Setup Issues](getting-started/configuration-troubleshooting/common-issues-troubleshooting.md) page.
-
----
-
-## Summary
-
-GoogleTest is the definitive choice for C++ testing, combining a powerful, expressive API with well-tested reliability and seamless integration. Its combined testing and mocking capabilities simplify your workflow, improve test clarity, and accelerate development cycles.
-
-Prepare to upgrade your testing process and deliver higher quality code with GoogleTest.
-
-
----
-
-## References
-
-- [GoogleTest User's Guide](docs/index.md)
-- [GoogleTest Primer](docs/primer.md)
-- [Quickstart: Building with CMake](docs/quickstart-cmake.md)
-- [GoogleMock Overview](googlemock/README.md)
-- [Core Testing APIs](api-reference/core-testing-apis/test-assertions.md)
-
-
----
-
-## Example: Typical main() Using GoogleMock and GoogleTest
-
-```cpp
-#include "gmock/gmock.h"
 
 int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);  // Initializes GoogleMock & GoogleTest
-  return RUN_ALL_TESTS();                // Runs all tests registered
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-This code snippet demonstrates the entry point found in `gmock_main.cc`, embodying the seamless integration and convenience offered by GoogleTest.
+### Prerequisites
+
+- Supported compilers with C++11 or later (GoogleTest 1.17.x requires at least C++17).
+- Basic familiarity with C++ and compiling/linking libraries.
+
+### Next Steps
+
+Explore the [GoogleTest Primer](https://google.github.io/googletest/primer.html) to learn how to write your first test and use fixtures effectively.
+
+Then dive into [Writing and Running Tests](https://google.github.io/googletest/reference/testing.html) to master the various test macros and assertion types.
+
+For examples, visit the [GoogleTest Samples](https://github.com/google/googletest/blob/main/googletest/samples) directory.
+
+---
+
+For further integration, performance tuning, mocking support, and advanced usage, consult other pages in the documentation.
+
